--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,15 @@ services:
       - 4040:80
     depends_on:
       - mysql
+  sqlserver:
+      image: mcr.microsoft.com/mssql/server:2022-latest
+      container_name: sqlserver2022
+      hostname: sqlserver2022
+      ports:
+        - 1433:1433
+      volumes:
+        - ./docker/mssql/data:/var/opt/mssql/data
+        - ./docker/mssql/log:/var/opt/mssql/log
+        - ./docker/mssql/secrets:/var/opt/mssql/sec
+      env_file: 
+        - sqlserver.env
