共通のフィールドを設定可能に。

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -10,6 +10,7 @@ upload_max_filesize = 20M
 post_max_size = 20M
 max_execution_time = 240
 memory_limit = 256M
+max_input_vars = 3000
 
 [error]
 log_errors = On
