--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,21 @@
 # app設定
 APP_PORT=
 
-# DB設定
-DATABASE=
-USERNAME=
-USERPASS=
+# MYSQL DB設定
+MYSQL_DATABASE=
+MYSQL_USERNAME=
+MYSQL_USERPASS=
+
+# MSSQL DB設定
+# 使用許諾契約書の同意
+ACCEPT_EULA=Y
+# タイムゾーンの設定
+TZ=Asia/Tokyo
+# 照合順序
+MSSQL_COLLATION=Japanese_CI_AS
+# 言語
+MSSQL_LCID=1041
+# SQLServerAgent
+MSSQL_AGENT_ENABLED=true
+# SAのパスワード
+MSSQL_SA_PASSWORD=
