--- a/src/composer.json
+++ b/src/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "mikecao/flight": "^2.0",
         "phpoffice/phpspreadsheet": "^1.29",
-        "league/flysystem": "^3.0"
+        "league/flysystem": "^3.0",
+        "vlucas/phpdotenv": "^5.6"
     }
 }
